#
# Copyright (C) 2023 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "libsignal-account-keys"
authors.workspace = true
license.workspace = true
version = "0.1.0"
edition = "2021"
description = "Operations for various account-associated keys"

[lints]
workspace = true

[dependencies]
libsignal-core = { workspace = true }

argon2 = { version = "0.5.0", features = ["zeroize"] }
derive_more = { workspace = true, features = ["from"] }
displaydoc = { workspace = true }
hkdf = { workspace = true }
partial-default = { workspace = true, features = ["derive"] }
rand = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
serde = { workspace = true, optional = true, features = ["derive"] }
sha2 = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
criterion = { workspace = true }
hex-literal = { workspace = true }
hmac = { workspace = true, features = ["reset"] }
proptest = { workspace = true }


[[bench]]
name = "hash"
harness = false
