#
# Copyright (C) 2022 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "attest"
version = "0.1.0"
authors = ["Signal Messenger LLC"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
boring = { git = "https://github.com/signalapp/boring", branch = "libsignal", default-features = false }

asn1 = "0.16.1"
base64 = "0.21"
bitflags = "2.3.3"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
displaydoc = "0.2"
hex = { version = "0.4", features = ["serde"] }
hex-literal = "0.4.1"
hmac = "0.12"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
prost = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sha2 = "0.10"
snow = { version = "0.9.5", default-features = false }
static_assertions = "1.1"
strum = { version = "0.26", features = ["derive"] }
subtle = "2.5"
uuid = "1.1.2"
x25519-dalek = "2.0.0"

[dev-dependencies]
assert_matches = "1.5"
snow = { version = "0.9.5", features = ["default-resolver"] }
test-case = "3.3"

[build-dependencies]
prost-build = "0.12"
