#
# Copyright (C) 2023 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "libsignal-core"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition = "2021"

[lints]
workspace = true

[dependencies]
curve25519-dalek = { workspace = true, features = ["digest"] }
derive_more = { workspace = true, features = ["from", "into"] }
displaydoc = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
uuid = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }

[dev-dependencies]
assert_matches = { workspace = true }
criterion = { workspace = true }
hex-literal = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "curve"
harness = false
