#
# Copyright (C) 2023 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "libsignal-core"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition = "2024"

[lints]
workspace = true

[dependencies]
curve25519-dalek = { workspace = true, features = ["digest"] }
derive_more = { workspace = true, features = ["from", "into", "try_from"] }
displaydoc = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }

[dev-dependencies]
assert_matches = { workspace = true }
boring = { workspace = true }
boring-sys = { workspace = true }
clap = { workspace = true, features = ["derive"] }
const-str = { workspace = true }
criterion = { workspace = true }
foreign-types = { workspace = true }
hex = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "curve"
harness = false
