[package]
name = "libsignal-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
libsignal-protocol = { path = "../protocol" }
pswoosh = { path = "../pswoosh" }
rand = "0.9"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "communication"
path = "src/communication.rs"

[[bin]]
name = "communication_no_pq"
path = "src/communication_no_pq.rs"

[[bin]]
name = "communication_swoosh"
path = "src/communication_swoosh.rs"

[[bin]]
name = "communication_debug"
path = "src/communication_debug.rs"

[[bin]]
name = "stack_overflow_test"
path = "src/stack_overflow_test.rs"

[[bin]]
name = "traditional_ratchet_test"
path = "src/traditional_ratchet_test.rs"

[[bin]]
name = "key_test"
path = "src/key_test.rs"
