#
# Copyright (C) 2023 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "signal-grpc"
version = "0.1.0"
authors = ["Signal Messenger LLC"]
edition = "2021"
license = "AGPL-3.0-only"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
displaydoc = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync","rt","rt-multi-thread"] }
tokio-stream = { workspace = true }
tonic = { version = "0.11.0", features = [ "tls", "tls-webpki-roots" ] }

[build-dependencies]
tonic-build = "0.11.0"
