#
# Copyright (C) 2024 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "libsignal-keytrans"
version = "0.0.1"
authors = ["Signal Messenger LLC"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
curve25519-dalek = { version = "4.1.3" }
displaydoc = "0.2"
ed25519-dalek = "2.1.0"
hmac = "0.12.1"
prost = "0.13"
sha2 = "0.10"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
assert_matches = "1.5.0"
hex-literal = "0.4.1"
proptest = "1.5.0"
test-case = "3.3.1"
